--- a/NodeFlow/index.html
+++ b/NodeFlow/index.html
@@ -18,6 +18,7 @@
         <button id="save-flow" type="button">Save</button>
         <button id="clear-flow" type="button">Clear</button>
         <button id="export-script" class="primary" type="button">Export Script</button>
+        <button id="run-script" class="primary" type="button">Run Script</button>
       </div>
     </header>
 
@@ -212,6 +213,53 @@
 
       let customSpecs = listCustomNodeSpecs();
       let editor;
+      const parseBridgeResponse = (raw) => {
+        if (!raw) {
+          return { exitCode: -1, stdout: '', stderr: 'PowerShell bridge returned no data.' };
+        }
+        if (typeof raw !== 'string') {
+          return { exitCode: -1, stdout: '', stderr: 'Unexpected response type from PowerShell bridge.' };
+        }
+        try {
+          const parsed = JSON.parse(raw);
+          if (typeof parsed === 'object' && parsed !== null) {
+            return {
+              exitCode: typeof parsed.exitCode === 'number' ? parsed.exitCode : 0,
+              stdout: typeof parsed.stdout === 'string' ? parsed.stdout : '',
+              stderr: typeof parsed.stderr === 'string' ? parsed.stderr : '',
+            };
+          }
+        } catch (error) {
+          return { exitCode: -1, stdout: raw, stderr: `Failed to parse response: ${error.message}` };
+        }
+        return { exitCode: 0, stdout: raw, stderr: '' };
+      };
+
+      const executeWithPowerShell = async (script) => {
+        if (!script) {
+          return { exitCode: -1, stdout: '', stderr: '生成されたスクリプトが空です。' };
+        }
+
+        try {
+          const webViewBridge = window.chrome?.webview?.hostObjects?.nodeBridge;
+          if (webViewBridge && typeof webViewBridge.RunPowerShell === 'function') {
+            let response = webViewBridge.RunPowerShell(script);
+            if (response && typeof response.then === 'function') {
+              response = await response;
+            }
+            return parseBridgeResponse(response);
+          }
+
+          if (window.external && typeof window.external.RunPowerShell === 'function') {
+            const response = window.external.RunPowerShell(script);
+            return parseBridgeResponse(response);
+          }
+        } catch (error) {
+          return { exitCode: -1, stdout: '', stderr: error.message };
+        }
+
+        return { exitCode: -1, stdout: '', stderr: 'PowerShell ブリッジが利用できません。' };
+      };
 
       const showToast = (message) => {
         if (!message) return;
@@ -686,6 +734,37 @@
       window.addEventListener('resize', () => editor.resize());
 
       document.getElementById('export-script').addEventListener('click', () => editor.exportScript());
+      document.getElementById('run-script').addEventListener('click', async () => {
+        if (!editor) {
+          return;
+        }
+        let builtScript = '';
+        try {
+          builtScript = editor.generateScript();
+        } catch (error) {
+          alert(error.message);
+          return;
+        }
+
+        let result;
+        try {
+          result = await executeWithPowerShell(builtScript);
+        } catch (error) {
+          alert(`PowerShell ブリッジ呼び出し中に例外が発生しました:\n${error.message}`);
+          return;
+        }
+        if (result.stderr) {
+          alert(`PowerShell 実行時にエラーが発生しました (exit ${result.exitCode ?? 'unknown'}):\n${result.stderr}`);
+          return;
+        }
+
+        const output = (result.stdout || '').trim();
+        if (output) {
+          alert(output);
+        } else {
+          showToast('PowerShell スクリプトを実行しました。');
+        }
+      });
       document.getElementById('save-flow').addEventListener('click', () => editor.persistGraph());
       document.getElementById('load-flow').addEventListener('click', () => editor.restoreGraph());
       document.getElementById('clear-flow').addEventListener('click', () => editor.clearGraph());
